(fix)fixing mobile navigation overflow bug

--- a/css/queriese.css
+++ b/css/queriese.css
@@ -84,6 +84,9 @@
 /* below 1024px */
 /* *************************** */
 @media (max-width: 64em) {
+  body {
+    overflow-x: hidden;
+  }
   .mobile-nav-menu {
     display: block;
   }
